# nlp-chaptering-experiments

./: .env  .env-example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  sentence_embedding_process.ipynb  text2chapters.ipynb  worker.py  worker_requirements.txt
backend/: const.py  crud.py  models.py
backend/api/v1/: main.py
backend/api/v1/routes/: prediction.py  user.py  videos.py
backend/core/: config.py  db.py
backend/schemas/: prediction.py  user.py  videos.py
content/: habr.txt  oleg.txt  test_text.txt
frontend/: api_utils.py  app.py  const.py
frontend/pages/: login.py  models.py  user_profile.py  video_analytics.py
test/api/v1/: test_auth.py  test_user.py  utils.py
timecodes/: __init__.py  chapter_estimation.py  chapters_to_timecodes.py  pipelines.py  speach_to_chapters.py  speach_to_text.py  speech_to_text.py  summarize.py  types.py
