[tool.poetry]
name = "nlp-experements"
version = "0.1.0"
description = ""
authors = ["MulhamShaheen <mulhamshaheen.ms@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
pandas = "^2.2.1"
keybert = "^0.8.4"
datasets = "^2.18.0"
faiss-cpu = "^1.8.0"
nltk = "^3.8.1"
sentence-transformers = "^2.5.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
